fixed spacing on projects

--- a/work.css
+++ b/work.css
@@ -125,6 +125,7 @@ h2 {
   width: 300px;
   height: 100%;
   position: relative;
+  margin: 30px;
 }
 
 .project img{
